completed issue 13 by adding in a function to create new divs wrapped in an a tag (for the link) whihc contains the info and the image. currently the link points to a wikipedia page, but that can be changed when links are added (lines just need to be uncommented), same goes for the link to their images. fixed small issues in search.html

--- a/lings-cars/css/search.css
+++ b/lings-cars/css/search.css
@@ -5,3 +5,11 @@
 .search-control-field {
     
 }
+
+.search-results-class p {
+    /* this is for the text inside of the search result boxes*/
+}
+.search-results-class img {
+    /* this is for the image*/
+    align-items: right;
+}
